    + [RA] Rename build-depends-indep-should-be-build-depends to
      clean-should-be-satisfied-by-build-depends to make the reason for
      the message clearer without running lintian -i.  Thanks to Osamu
      Aoki for the suggestion.  (Closes: #405840)
    + [RA] Recognize the +bX convention for binary NMUs.  Warn about use
      of the old three-part version numbers.
  * checks/manpages:
    + [RA] When checking for hyphen used as a minus sign, avoid false
      positives on \s-1 (small font) and \*(-- (pod2man long dash).
  * checks/menu-format{.desc,}:
    + [RA] If a menu icon isn't an absolute path, only look for it in
      /usr/share/pixmaps, not in the old X11R6 paths.  Update the long tag
      description accordingly.
  * checks/menus:
    + [JA] Perl syntax corrections.  Removed extra empty newlines.
  * checks/lintian.desc:
    + [RA] List emergency as a valid urgency.
  * checks/nmu{.desc,}:
    + [RA] List the exact phrases recognized by lintian as marking an NMU.
      Reported by Jari Aalto.  (Closes: #409108)
    + [RA] Recognize the +bX convention for binary NMUs.
  * checks/po-debconf:
    + [RA] Now that we're passing --use-untranslated to msgcmp, we have to
      compare the generated pot file with the one in the package both
      directions to catch all out of date errors.  Thanks, Thomas
      Huriaux.  (Closes: #402662)
  * checks/rules{.desc,}:
    + [RA] Fix the policy section for debian-rules-missing-required-target
      and debian-rules-not-a-makefile.  Thanks, Daniel Kahn Gillmor.
      (Closes: #414964)
    + [RA] Warn about use of $(PWD) instead of $(CURDIR).
  * checks/scripts{.desc,}:
    + [RA] update-inetd is now its own package and netbase may not always
      depend on it.  Update the check to require a dependency on
      update-inetd, inet-superserver, or one of the inet-superserver
      packages that provides update-inetd.  Reported by Tatsuya Kinoshita.
      (Closes: #402319)