@@ -23,20 +23,20 @@ W: scripts source: maintainer-script-lacks-debhelper-token debian/postrm
 W: scripts source: package-uses-deprecated-debhelper-compat-version 1
 W: scripts source: source-nmu-has-incorrect-version-number 6
 W: scripts source: uses-dh-python-with-no-pycompat
-W: scripts: binary-without-manpage lefty-foo
-W: scripts: binary-without-manpage make-foo
-W: scripts: binary-without-manpage perl-bizarre-1
-W: scripts: binary-without-manpage perl-bizarre-2
-W: scripts: binary-without-manpage perl-bizarre-3
-W: scripts: binary-without-manpage perlfoo
-W: scripts: binary-without-manpage py2foo
-W: scripts: binary-without-manpage pyfoo
-W: scripts: binary-without-manpage rubyfoo
-W: scripts: binary-without-manpage suidperlfoo
-W: scripts: binary-without-manpage suidperlfoo2
-W: scripts: binary-without-manpage test.sh
-W: scripts: binary-without-manpage tkfoo
-W: scripts: binary-without-manpage wishfoo
+W: scripts: binary-without-manpage usr/bin/lefty-foo
+W: scripts: binary-without-manpage usr/bin/make-foo
+W: scripts: binary-without-manpage usr/bin/perl-bizarre-1
+W: scripts: binary-without-manpage usr/bin/perl-bizarre-2
+W: scripts: binary-without-manpage usr/bin/perl-bizarre-3
+W: scripts: binary-without-manpage usr/bin/perlfoo
+W: scripts: binary-without-manpage usr/bin/py2foo
+W: scripts: binary-without-manpage usr/bin/pyfoo
+W: scripts: binary-without-manpage usr/bin/rubyfoo
+W: scripts: binary-without-manpage usr/bin/suidperlfoo
+W: scripts: binary-without-manpage usr/bin/suidperlfoo2
+W: scripts: binary-without-manpage usr/bin/test.sh
+W: scripts: binary-without-manpage usr/bin/tkfoo
+W: scripts: binary-without-manpage usr/bin/wishfoo
 W: scripts: executable-is-not-world-readable usr/bin/perl-bizarre-2 0750 != 0755
 W: scripts: executable-is-not-world-readable usr/bin/suidperlfoo2 4751
 W: scripts: executable-not-elf-or-script ./usr/bin/perl-bizarre-3
